feat: add errors to spec and error handling in code
